Добавил кастомные исключения, удалил лишние классы, почистил код, сделал его более читаемым и простым