@@ -5,17 +5,13 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import ru.yandex.practicum.filmorate.Exception.FilmNotFoundException;
-import ru.yandex.practicum.filmorate.Exception.LikeNotFoundException;
-import ru.yandex.practicum.filmorate.Exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.service.FilmService;
 import ru.yandex.practicum.filmorate.service.UserService;
-import ru.yandex.practicum.filmorate.validator.ErrorResponse;
 import ru.yandex.practicum.filmorate.validator.FilmValidator;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 @Slf4j
 @RestController
@@ -29,25 +25,19 @@ public class FilmController {
     public FilmController(FilmService filmService, FilmValidator filmValidator, UserService userService) {
         this.filmService = filmService;
         this.filmValidator = filmValidator;
-        this.userService = userService; // Инициализируем userService
+        this.userService = userService;
     }
 
     @PostMapping
-    public ResponseEntity<?> createFilm(@RequestBody Film film) {
-        try {
-            // Валидируем фильм
-            filmValidator.validate(film);
+    public ResponseEntity<Film> createFilm(@RequestBody Film film) {
+        // Валидируем фильм
+        filmValidator.validate(film);
 
-            // Создаем фильм
-            Film createdFilm = filmService.addFilm(film);
+        // Создаем фильм
+        Film createdFilm = filmService.addFilm(film);
 
-            // Возвращаем созданный фильм с кодом 201
-            return ResponseEntity.status(HttpStatus.CREATED).body(createdFilm);
-        } catch (ValidationException e) {
-            // Возвращаем 400 Bad Request с ошибкой валидации
-            ErrorResponse errorResponse = new ErrorResponse("Ошибка валидации: " + e.getMessage());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
-        }
+        // Возвращаем созданный фильм с кодом 201
+        return ResponseEntity.status(HttpStatus.CREATED).body(createdFilm);
     }
 
     @GetMapping
@@ -57,31 +47,20 @@ public class FilmController {
     }
 
     @PutMapping
-    public ResponseEntity<?> updateFilm(@RequestBody Film film) {
-        try {
-            // Логирование для отладки
-            log.info("Запрос на обновление фильма: " + film);
+    public ResponseEntity<Film> updateFilm(@RequestBody Film film) {
+        log.info("Запрос на обновление фильма: " + film);
 
-            // Если ID фильма не указан
-            if (film.getId() == null) {
-                log.error("ID фильма не может быть null");
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(new ErrorResponse("ID фильма не может быть null"));
-            }
-
-            // Обновляем фильм
-            Film updatedFilm = filmService.updateFilm(film);
-
-            // Возвращаем обновленный фильм
-            return ResponseEntity.ok(updatedFilm);
-        } catch (FilmNotFoundException e) {
-            // Если фильм не найден
-            log.error("Ошибка: " + e.getMessage());
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ErrorResponse(e.getMessage()));
-        } catch (Exception e) {
-            // Логирование ошибки и возврат ответа 500
-            log.error("Произошла ошибка при обновлении фильма", e);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new ErrorResponse("Произошла ошибка при обновлении фильма"));
+        // Если ID фильма не указан
+        if (film.getId() == null) {
+            log.error("ID фильма не может быть null");
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(null);
         }
+
+        // Обновляем фильм
+        Film updatedFilm = filmService.updateFilm(film);
+
+        // Возвращаем обновленный фильм
+        return ResponseEntity.ok(updatedFilm);
     }
 
     @DeleteMapping("/{id}")
@@ -91,40 +70,26 @@ public class FilmController {
     }
 
     @PutMapping("/{filmId}/like/{userId}")
-    public ResponseEntity<?> addLike(@PathVariable Integer filmId, @PathVariable Integer userId) {
-        try {
-            if (!userService.userExists(userId)) {
-                log.error("Ошибка: Пользователь с ID " + userId + " не найден");
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Collections.singletonMap("error", "Пользователь не найден")); // 404 Not Found
-            }
-
-            if (!filmService.filmExists(filmId)) {
-                log.error("Ошибка: Фильм с ID " + filmId + " не найден");
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Collections.singletonMap("error", "Фильм не найден")); // 404 Not Found
-            }
-
-            filmService.addLike(filmId, userId);
-            Film updatedFilm = filmService.getFilm(filmId);
-            return ResponseEntity.status(HttpStatus.OK).body(updatedFilm); // 200 OK
-        } catch (RuntimeException e) {
-            log.error("Ошибка: " + e.getMessage(), e);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Collections.singletonMap("error", "Внутренняя ошибка сервера")); // 500 Internal Server Error
+    public ResponseEntity<Object> addLike(@PathVariable Integer filmId, @PathVariable Integer userId) {
+        if (!userService.userExists(userId)) {
+            log.error("Ошибка: Пользователь с ID " + userId + " не найден");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", "Пользователь с ID " + userId + " не найден")); // Возвращаем JSON-объект
         }
+
+        if (!filmService.filmExists(filmId)) {
+            log.error("Ошибка: Фильм с ID " + filmId + " не найден");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", "Фильм с ID " + filmId + " не найден")); // Возвращаем JSON-объект
+        }
+
+        filmService.addLike(filmId, userId);
+        Film updatedFilm = filmService.getFilm(filmId);
+        return ResponseEntity.ok(updatedFilm); // 200 OK
     }
 
-
     @DeleteMapping("/{filmId}/like/{userId}")
-    public ResponseEntity<ErrorResponse> removeLike(@PathVariable Integer filmId, @PathVariable Integer userId) {
-        try {
-            filmService.removeLike(filmId, userId);
-            return ResponseEntity.status(HttpStatus.NO_CONTENT).build(); // 204 No Content
-        } catch (FilmNotFoundException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ErrorResponse("Фильм не найден: " + e.getMessage())); // 404 Not Found
-        } catch (LikeNotFoundException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ErrorResponse("Лайк не найден: " + e.getMessage())); // 404 Not Found
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new ErrorResponse("Произошла ошибка: " + e.getMessage())); // 500 Internal Server Error
-        }
+    public ResponseEntity<Void> removeLike(@PathVariable Integer filmId, @PathVariable Integer userId) {
+        filmService.removeLike(filmId, userId);
+        return ResponseEntity.noContent().build(); // 204 No Content
     }
 
     @GetMapping("/popular")
@@ -136,4 +101,3 @@ public class FilmController {
         return ResponseEntity.ok(popularFilms);
     }
 }
-
